add ability to decline reports
